tests/ui/issues/issue-21763.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
  --> $DIR/issue-21763.rs:11:11
   |
LL |     foo::<HashMap<Rc<()>, Rc<()>>>();
   |           ^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
   |
   = help: within `(Rc<()>, Rc<()>)`, the trait `Send` is not implemented for `Rc<()>`
   = note: required because it appears within the type `(Rc<()>, Rc<()>)`
   = note: required for `hashbrown::raw::RawTable<(Rc<()>, Rc<()>)>` to implement `Send`
note: required because it appears within the type `hashbrown::map::HashMap<Rc<()>, Rc<()>, RandomState>`
  --> $HASHBROWN_SRC_LOCATION
note: required because it appears within the type `HashMap<Rc<()>, Rc<()>>`
  --> $SRC_DIR/std/src/collections/hash/map.rs:LL:COL
note: required by a bound in `foo`
  --> $DIR/issue-21763.rs:8:11
   |
LL | fn foo<T: Send>() {}
   |           ^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
